checkpoint before modification on notations, etc

--- a/headers.tex
+++ b/headers.tex
@@ -63,7 +63,7 @@
 \newcommand{\matb}{\bsym{B}}
 \newcommand{\matw}{\bsym{W}}
 \newcommand{\matp}{\bsym{P}}
-\newcommand{\matpcal}{\bsym{\mathcal{P}}}
+\newcommand{\matpdistr}{\bsym{P}'}
 \newcommand{\matf}{\bsym{F}}
 \newcommand{\matfstar}{\bsym{F}^*}
 \newcommand{\mati}{\bsym{I}}
